cookbooks/ethereum/beacons/infra/processed_beacon_ingress/ing-ephemeral.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  creationTimestamp: null
  labels:
    version: version-1671138574058009928
  name: ephemeral
spec:
  ingressClassName: nginx
  rules:
  - host: eth.ephemeral.zeus.fyi
    http:
      paths:
      - backend:
          service:
            name: zeus-exec-client
            port:
              number: 80
        path: /
        pathType: Exact
      - backend:
          service:
            name: zeus-consensus-client
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - eth.ephemeral.zeus.fyi
    secretName: ephemeral-tls
status:
  loadBalancer: {}
